--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,35 @@
 alembic==1.4.3
+appdirs==1.4.3
+apturl==0.5.2
+astroid==2.5.2
+atomicwrites==1.1.5
+attrs==18.1.0
+backcall==0.1.0
+bcrypt==3.1.7
 blinker==1.4
+Brlapi==0.7.0
+certifi==2019.11.28
+chardet==3.0.4
 click==7.1.2
+colorama==0.4.3
+command-not-found==0.3
+cryptography==2.8
+cupshelpers==1.0
+dbus-python==1.2.16
+decorator==4.4.2
+defer==1.0.6
+distlib==0.3.0
+distro==1.4.0
+distro-info===0.23ubuntu1
 dnspython==2.0.0
 dominate==2.6.0
+duplicity==0.8.12.0
 email-validator==1.1.1
+entrypoints==0.3
+fasteners==0.14.1
+filelock==3.0.12
 Flask==1.1.2
+Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
@@ -14,19 +39,97 @@ Flask-SimpleMDE==0.3.0
 Flask-SQLAlchemy==2.4.4
 Flask-Uploads==0.2.1
 Flask-WTF==0.14.3
+future==0.18.2
+greenlet==1.0.0
 gunicorn==20.0.4
+httplib2==0.14.0
 idna==2.10
+importlib-metadata==1.5.0
+ipython==7.13.0
+ipython-genutils==0.2.0
+isort==5.8.0
 itsdangerous==1.1.0
+jedi==0.15.2
 Jinja2==2.11.2
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lazy-object-proxy==1.6.0
+linecache2==1.0.0
+lockfile==0.12.2
+louis==3.12.0
+macaroonbakery==1.3.1
 Mako==1.1.3
+Markdown==3.3.4
 markdown2==2.3.10
 MarkupSafe==1.1.1
+mccabe==0.6.1
+micawber==0.5.3
+monotonic==1.5
+more-itertools==4.2.0
+netifaces==0.10.4
+oauthlib==3.1.0
+olefile==0.46
+paramiko==2.6.0
+parso==0.5.2
+pbr==5.4.5
+peewee==3.14.4
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==7.0.0
+pluggy==0.6.0
+prompt-toolkit==2.0.10
+protobuf==3.6.1
 psycopg2==2.8.6
+py==1.5.4
+pycairo==1.16.2
+pycups==1.9.73
+Pygments==2.3.1
+PyGObject==3.36.0
+PyJWT==1.7.1
+pylint==2.7.4
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyperclip==1.8.2
+pyRFC3339==1.1
+python-apt==2.0.0+ubuntu0.20.4.4
 python-dateutil==2.8.1
+python-debian===0.1.36ubuntu1
 python-dotenv==0.14.0
 python-editor==1.0.4
+pytz==2019.3
+pyxdg==0.26
+PyYAML==5.3.1
+reportlab==3.5.34
+requests==2.22.0
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
+simplejson==3.16.0
 six==1.15.0
 SQLAlchemy==1.3.20
+stevedore==3.3.0
+systemd-python==234
+testresources==2.0.0
+toml==0.10.2
+traceback2==1.4.0
+traitlets==4.3.3
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+unittest2==1.1.0
+urllib3==1.25.8
+usb-creator==0.3.7
+virtualenv==20.0.17
+virtualenv-clone==0.5.4
+virtualenvwrapper==4.8.4
 visitor==0.1.3
+wadllib==1.3.3
+wcwidth==0.1.8
 Werkzeug==0.16.0
+wrapt==1.12.1
 WTForms==2.3.3
+xkit==0.0.0
+zipp==1.0.0
