--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 alembic==1.4.3
 appdirs==1.4.3
+apturl==0.5.2
 astroid==2.5.2
 atomicwrites==1.1.5
 attrs==18.1.0
 backcall==0.1.0
 bcrypt==3.1.7
 blinker==1.4
+Brlapi==0.7.0
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
+command-not-found==0.3
 cryptography==2.8
+cupshelpers==1.0
 dbus-python==1.2.16
 decorator==4.4.2
 defer==1.0.6
